# dtiku-ai

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  test.api.http
config/: app-prod.toml  app.toml
src/: main.rs
src/plugins/: fastembed.rs
src/service/: embedding.rs
static/: index.html
